# gemma4metal

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  chat.py  chat_repl.py  gemma4_bench.cpp  gemma4_inference.cpp  gemma4_multilayer.cpp  gemma4_multilayer_cs.cpp  gemma4_multilayer_nocs.cpp  gemma4_multiturn.cpp  gemma4_test.cpp  mlx_chat.py  mlx_moe_chat.py  run_tests.sh  test_configs.cpp  test_d512.cpp  test_debug512.cpp  test_gqa2.cpp  test_main.cpp  turboquant.cpp  turboquant.h  turboquant.metal
assets/: generate_charts.py
benchmarks/: context_scaling.cpp  kv_precision_sweep.cpp  latest.json  polar_quality_sweep.cpp  profile_decode.cpp
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libnanobind.dylib  libturboquant_lib.dylib  setup.py  turboquant.air  turboquant.metallib
cpp/turboquant/: bindings.cpp  gemma4_block.cpp  test_main.cpp  turboquant.cpp  turboquant.h  turboquant.metal
engine/: chat_repl.py  gemma4_multilayer.cpp  run_tests.sh
kernels/metal/: polar_transform.metal  qjl_quant.metal  sdpa_turboquant.metal
python/: CMakeLists.txt  benchmark.py  compressed_attention.py  compressed_attention_cache.py  fast_cache.py  hybrid_cache.py  index_packing.py  mlx_adapter.py  polar_fused_quantize.py  polar_metal.py  qjl_metal.py  requirements.txt  sdpa_compressed.py  setup.py  tq_bindings.cpp  turboquant.py  turboquant_blockscore.py  turboquant_fused.py  turboquant_native.py
reference/: polarquant.md  qjl.md  turboquant.md
tests/: test_correctness.py  test_e2e_inference.py  test_sdpa_int4.cpp
